[gd_scene load_steps=5 format=3 uid="uid://daskw41451os1"]

[ext_resource type="Script" uid="uid://dnpvttyh12rfd" path="res://target_puck.gd" id="1_de3f3"]
[ext_resource type="Texture2D" uid="uid://b1yumlaugdoyk" path="res://tex/bg_red.png" id="2_de3f3"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_d5x1h"]
resource_local_to_scene = true
height = 0.2
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qwutr"]
albedo_texture = ExtResource("2_de3f3")
uv1_triplanar = true

[node name="target_puck" type="RigidBody3D" groups=["puck"]]
top_level = true
continuous_cd = true
contact_monitor = true
max_contacts_reported = 6
script = ExtResource("1_de3f3")

[node name="collision_shape_3d" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_d5x1h")

[node name="csg_cylinder_3d" type="CSGCylinder3D" parent="."]
radius = 1.0
height = 0.2
sides = 32
material = SubResource("StandardMaterial3D_qwutr")

[node name="label_3d" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.684386, 0)
visible = false
billboard = 1
no_depth_test = true
text = "Current State"
